Add application entry point and update README with full documentation